nouveau: Updating to Mesa*22.2.0 makes videos have corrupted colors in Firefox
Downgrading to Mesa*21.1.7 fixes the issue.
This is with a GTX770 nvidia card, using nouveau and the modesetting driver.
Disabling hw acceleration in Firefox-104.0.2 also fixes the issue (which means that WebRender software doesn't have the problem, but performance is too bad).
This is with a video on e.g. youtube where the video "stats" say: Codecs: vp09.00.51.08.01.01.01.01.00 (244) / opus (251)
Uninstalling Mesa-dri-nouveau and restarting Firefox, the video colours are OK.
Git bisecting this is the responsible commit:
reverting the change in src/gallium/drivers/nouveau/nouveau_screen.c (testing was done on the main branch) fixes the issue.